trunk/Archive2/31/5c33dfd42ebbfc/output
main.cpp: In function 'int main()':
main.cpp:12:11: error: expected primary-expression before 'unsigned'
     srand(unsigned int(time(0)));
           ^
